--- a/InfiniteMeals/InfiniteMeals/ViewModel/MealSelect/MealChoices.xaml
+++ b/InfiniteMeals/InfiniteMeals/ViewModel/MealSelect/MealChoices.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="InfiniteMeals.MealSelect.MealChoices"
+             x:Class="InfiniteMeals.ViewModel.MealSelect.MealChoices"
              NavigationPage.HasBackButton="False"
              Title=" Meal Schedule ">
 <ContentPage.Content>
