--- a/InfiniteMeals/InfiniteMeals/ViewModel/Profile/UserProfile.xaml
+++ b/InfiniteMeals/InfiniteMeals/ViewModel/Profile/UserProfile.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="InfiniteMeals.Profile.UserProfile" Title="User Profile">
+             x:Class="InfiniteMeals.ViewModel.Profile.UserProfile" Title="User Profile">
     <ContentPage.Content>
         <StackLayout VerticalOptions="CenterAndExpand" Padding="5">
             <Label Text="Username"/>
