--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,10 +32,14 @@
 }
 
 p {
-  font-family: "montserrat"
+  font-family: "montserrat";
 }
 
-h2, h3, h4, h5, h6 {
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "oswald" !important;
 }
 
@@ -47,9 +51,10 @@ a {
   font-family: montserrat;
 }
 
-.btn.focus, .btn:focus {
+.btn.focus,
+.btn:focus {
   outline: 0;
-  box-shadow: none!important;
+  box-shadow: none !important;
 }
 
 /* ----- navigation header ----- */
@@ -918,4 +923,11 @@ hr.four {
   display: inline-block;
   text-align-last: center;
   font-weight: bold;
+}
+
+.half-opacity {
+  opacity: 0.5;
+}
+.w-20 {
+  width: 20% !important;
 }
