--- a/InfiniteMeals/InfiniteMeals/ViewModel/Checkout/CheckoutLoginPage.xaml
+++ b/InfiniteMeals/InfiniteMeals/ViewModel/Checkout/CheckoutLoginPage.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="PrepToYourDoor.ViewModel.Checkout.CheckoutLogin">
+             x:Class="PrepToYourDoor.ViewModel.Checkout.CheckoutLoginPage">
     <ContentPage.Content>
 
 
