--- a/InfiniteMeals/InfiniteMeals/ViewModel/Checkout/DeliveryPage.xaml
+++ b/InfiniteMeals/InfiniteMeals/ViewModel/Checkout/DeliveryPage.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="InfiniteMeals.ViewModel.Checkout.Delivery">
+             x:Class="InfiniteMeals.ViewModel.Checkout.DeliveryPage">
     <ContentPage.Content>
 
         <Grid Padding="15,15,15,15">
