--- a/InfiniteMeals/InfiniteMeals/ViewModel/Checkout/SummaryPage.xaml
+++ b/InfiniteMeals/InfiniteMeals/ViewModel/Checkout/SummaryPage.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="InfiniteMeals.ViewModel.Checkout.Summary">
+             x:Class="InfiniteMeals.ViewModel.Checkout.SummaryPage">
     <ContentPage.Content>
         <!-- grid for the entire page -->
         <Grid Grid.RowSpacing="3" BackgroundColor="White" Padding="15,15,15,15">
