--- a/InfiniteMeals/InfiniteMeals/ViewModel/Profile/ChangePasswordPage.xaml
+++ b/InfiniteMeals/InfiniteMeals/ViewModel/Profile/ChangePasswordPage.xaml
@@ -25,7 +25,7 @@
 
 
             <BoxView Grid.Row="1"/>
-            <Label Grid.Row="1" Text="Old Password" VerticalOptions="Center" FontSize="Medium" TextColor="Black"/>
+            <Label x:Name="oldPasswordLabel" Grid.Row="1" Text="Old Password" VerticalOptions="Center" FontSize="Medium" TextColor="Black"/>
             <Entry x:Name="oldPassword" Grid.Column="1" Grid.Row="1" Placeholder="Enter old password" IsPassword="True" VerticalOptions="Center"/>
 
         <BoxView Grid.Row="2"/>
