--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,6 +27,12 @@
   --orange: #ff8c42;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
 .content-container {
   padding-top: 140px;
 }
@@ -64,10 +70,10 @@ a {
   background: white;
 }
 
-.navigation-logo-container {
+/* .navigation-logo-container {
   text-align: center;
   margin: 10px 30px 0 0;
-}
+} */
 
 .logo {
   height: 60px;
@@ -76,11 +82,20 @@ a {
 
 .black-link,
 .black-link a {
-  color: black;
+  color:var(--black)!important;
+  /* align-self:flex-end; */
 }
 
 .navigation-link {
-  margin: 60px 35px 0 35px;
+  margin: 50px 35px 0 35px;
+  /* vertical-align:text-bottom; */
+  display:flex;
+}
+
+@media only screen and (max-width: 990px) {
+  .navigation-link {
+    margin: 10px 35px 0 35px;
+  }
 }
 
 .navigation-start {
@@ -178,7 +193,7 @@ a {
 
 .title-image-container {
   color: white;
-  margin-top: -40px;
+  /* margin-top: -40px; */
 }
 .title-image {
   width: 100%;
