--- a/client/src/App.css
+++ b/client/src/App.css
@@ -92,7 +92,7 @@ a {
   display:flex;
 }
 
-@media only screen and (max-width: 990px) {
+@media only screen and (max-width: 991px) {
   .navigation-link {
     margin: 10px 35px 0 35px;
   }
@@ -194,12 +194,25 @@ a {
 
 .title-image-container {
   color: white;
-  /* margin-top: -40px; */
 }
 .title-image {
-  width: 100%;
-  height: 800px;
+  max-width: 100%;
+  height: auto;
   object-fit: cover;
+}
+
+/* @media only screen and (max-width: 478px) {
+  .title-image {
+    width: 400px;
+    object-fit: cover;
+  }
+} */
+
+@media only screen and (max-width: 768px) {
+  .title-image {
+    max-width: 400px;
+    /* object-fit:cover; */
+  }
 }
 
 .top-left {
@@ -317,8 +330,9 @@ a {
 }
 
 .img-2-carrot {
-  width: 100%;
-  height: 80%;
+  max-width: 100%;
+  /* height: 80%; */
+  height: auto;
   margin: 80px 0 0 -30px;
   object-fit: cover;
 }
