coupon ui clarity

--- a/InfiniteMeals/InfiniteMeals/ViewModel/Checkout/SummaryPage.xaml
+++ b/InfiniteMeals/InfiniteMeals/ViewModel/Checkout/SummaryPage.xaml
@@ -44,11 +44,9 @@
 
                 <!-- meal plan + payment option + cost -->
                 <StackLayout Grid.Row="1" Orientation="Horizontal" Grid.ColumnSpan="2" Padding="10,0,0,0">
-                    <Label x:Name="mealPlan" Grid.Row="1" TextColor="Black"/>
-                    <Label Grid.Row="1" Grid.ColumnSpan="2" Text="-" TextColor="Black"/>
-                    <Label x:Name="paymentOption" Grid.Row="1" HorizontalOptions="End" TextColor="Black"/>
+                    <Label x:Name="fullPlan" Grid.Row="1" TextColor="Black"/>
                 </StackLayout>
-                <Label Grid.Column="1" Grid.Row="1" Text="{Binding shippingInformation.subscriptionPlan.cost, StringFormat='${0:F2}'}" TextColor="Black" HorizontalOptions="End"/>
+                <Label x:Name="totalCostLabel" Grid.Column="1" Grid.Row="1" Text="{Binding shippingInformation.subscriptionPlan.cost, StringFormat='${0:F2}'}" TextColor="Black" HorizontalOptions="End"/>
 
                 <!-- estimated shipping + estimated shipping cost -->
                 <Label Grid.Row="2" Text="Estimated Shipping" TextColor="Black" Padding="10,0,0,0"/>
@@ -164,16 +162,16 @@
 
                 <!-- expiration date -->
                 <StackLayout Grid.Column="0" Grid.Row="3" Orientation="Horizontal" Padding="10,0,0,0">
-                    <Label Grid.Column="0" Grid.Row="3"  Text="Expiration Date: " TextColor="Black"/>
+                    <Label Grid.Column="0" Grid.Row="3"  Text="Exp Date: " TextColor="Black"/>
                     <Label Grid.Column="0" Grid.Row="3" Text="{Binding paymentInformation.expirationMonth}" TextColor="Black"/>
                     <Label Grid.Column="0" Grid.Row="3" Text="/" TextColor="Black" />
                     <Label Grid.Column="0" Grid.Row="3" Text="{Binding paymentInformation.expirationYear}" TextColor="Black"/>
                 </StackLayout>
 
                 <!-- cvv -->
-                <StackLayout Grid.Column="0" Grid.Row="4" Orientation="Horizontal" Padding="10,0,0,0">
-                    <Label Grid.Column="0" Grid.Row="4"  Text="CVV: " TextColor="Black"/>
-                    <Label Grid.Column="0" Grid.Row="4" Text="{Binding paymentInformation.cvv}" TextColor="Black"/>
+                <StackLayout Grid.Column="1" Grid.Row="1" Orientation="Horizontal" HorizontalOptions="Center" Padding="10,0,0,0">
+                    <Label Grid.Column="1" Grid.Row="1"  Text="CVV: " TextColor="Black"/>
+                    <Label Grid.Column="1" Grid.Row="1" Text="{Binding paymentInformation.cvv}" TextColor="Black"/>
                 </StackLayout>
 
             </Grid>
